basic game logic, game over screen

--- a/react-native-game/.vscode/settings.json
+++ b/react-native-game/.vscode/settings.json
@@ -76,10 +76,10 @@
     }
   ],
   "files.exclude": {
-    // ".gitignore": true,
+    ".gitignore": true,
     // "**/ErrorBoundary": true,
     // "config": true,
-    // "node_modules": true,
+    "node_modules": true,
     // "package-lock.json": true,
     // "package.json": true,
     // "public": true,
